InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProducerEducation__c/vlocity_ins__ProducerEducation__c.object-meta.xml
<CustomObject>
    <description>Represents education and certification requirements or achievements earned by an insurance agent/broker to maintain their ability to sell different types of insurance products. Master-detail child object of an Agent/Broker/Producer Contact.</description>
    <label>Continuing Education</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Continuing Education</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>