InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProducerEducation__c/fields/vlocity_ins__CertificationNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CertificationNumber__c</fullName>
    <label>Certification #</label>
    <type>TextArea</type>
</CustomField>