InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProducerEducation__c/fields/vlocity_ins__EducationType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EducationType__c</fullName>
    <label>Education Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ethics</fullName>
            </value>
            <value>
                <fullName>Life Training</fullName>
            </value>
            <value>
                <fullName>Life Insurance</fullName>
            </value>
            <value>
                <fullName>Property Insurance</fullName>
            </value>
            <value>
                <fullName>Auto Insurance</fullName>
            </value>
            <value>
                <fullName>Annuities</fullName>
            </value>
            <value>
                <fullName>Business Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>