InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProducerEducation__c/fields/vlocity_ins__HoursRequired__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__HoursRequired__c</fullName>
    <label>Hours Required</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>