InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProducerEducation__c/fields/vlocity_ins__ProducerId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProducerId__c</fullName>
    <label>Producer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Continuing Education</relationshipLabel>
    <relationshipName>ContinuingEducation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>